--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,11 @@
 [nosetests]
-verbosity=2
-rednose=1
-with-coverage=1
-cover-inclusive=1
-cover-erase=1
-cover-package=agentzero
 cover-branches=1
+cover-erase=1
+cover-inclusive=1
+rednose=1
 stop=1
+verbosity=2
+with-coverage=1
+nocapture=1
+nologcapture=1
+# with-randomly=1
