--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,10 @@
 envlist = py27, py36
 
 [testenv]
-commands = nosetests --rednose -vv --with-coverage --cover-package=agentzero
+commands = make unit functional
 deps =
     nose
+    sure
+    freezegun
     rednose
     coverage
