--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,12 @@ python:
   - "2.7"
   - "3.6"
 
-env:
-  - TEST_TYPE=unit
-  - TEST_TYPE=functional
-
 install:
   - pip install pipenv
   - pip install -r development.txt
 
 script:
-  - make $TEST_TYPE
+  - make unit functional
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
