--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,22 @@ python:
 
 install:
   - pip install pipenv
-  - pip install -r development.txt
+  - pipenv install --dev
 
 script:
   - make unit functional
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+
+
+# automated pypi releases
+deploy:
+  provider: pypi
+  user: gabrielfalcao
+  password:
+    secure: E5KbnpQau7jv/mpHWAs19Y5zBaOHyBXRCGAsTS0S5lEOp/g8EEbjyt5rL7lcIeFAYarIds719BktC5iO+1AQbXOYicS5vDfiVRdLaJ5HPA4v6zyyQzwadFKSqE1Tv11AG9xkFDfBEPLTQmSrpI5cJIY5UoafDnMZe4CbLVETTw8=
+  on:
+    branch: master
+    tags: true
+  distributions: sdist bdist_wheel
