--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,3 @@
-include COPYING *.rst agentzero/docs/* agentzero/docs/source/*
+include COPYING *.rst
+recursive-include agentzero/docs *.*
+recursive-include agentzero/docs/source *.*
