--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ flake8 = "^3.7"
 ipdb = "^0.12.0"
 mccabe = "^0.6.1"
 twine = "^1.13"
+freezegun = "^0.3.11"
 
 [build-system]
 requires = ["poetry>=0.12"]
