--- a/.github/workflows/python-3.7.yml
+++ b/.github/workflows/python-3.7.yml
@@ -18,7 +18,7 @@ jobs:
       run: sudo apt-get update
 
     - name: Install dependencies
-      run: sudo apt-get install -y libgdbm-dev libreadline-dev coreutils bzip2 gcc libc-dev libffi-dev libopenssl-dev libsqlite-dev zlibc make
+      run: sudo apt-get install -y libgdbm-dev libreadline-dev coreutils bzip2 gcc libc-dev libffi-dev openssl libssl-dev libsqlite-dev zlibc make
 
     - name: setup pyenv
       uses: "gabrielfalcao/pyenv-action@v6"
